resources/css/theme.css
@-webkit-keyframes pop-in {
    0% { opacity: 0; -webkit-transform: scale(0.5); }
    100% { opacity: 1; -webkit-transform: scale(1); }
}
@-moz-keyframes pop-in {
    0% { opacity: 0; -moz-transform: scale(0.5); }
    100% { opacity: 1; -moz-transform: scale(1); }
}
@keyframes pop-in {
    0% { opacity: 0; transform: scale(0.5); }
    100% { opacity: 1; transform: scale(1); }
}

html, body {
    height:100%;
    width: 100%;
    margin: 0;
    padding: 0;
    border: 0;
    /* background-color: #fafafa; causes issues with parallax */
    font-family: GillSans, Calibri, Trebuchet, sans-serif;
}

#homeNav {
    height: 64px;
    margin-right: 50px;
}

#homeNav p {
    float:right;
    margin-top: 0px;
    margin-bottom: -26px;
    font-family: GillSans, Calibri, Trebuchet, sans-serif;
}

#wrapper {
    height: calc(100% - 64px);
    height: -moz-calc(100% - 64px);
    height: -webkit-calc(100% - 64px);
    height: -o-calc(100% - 64px);
    height: calc(100% - 64px);
}

#wrapper td {
    vertical-align: middle;
    text-align: center;
}

#wrapper p {

}

#wrapper hr {
    border: 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
}

#me {
    width: 25%;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}


#nav-mobile p{
    width: 80%;
    float: right;
    margin-top: 0px;
 }

#nav-mobile a{
    width: 100%;
}

#wrapper td img:hover {
    -webkit-transform:scale(1.1);
    -moz-transform:scale(1.1);
    -ms-transform:scale(1.1);
    -o-transform:scale(1.1);
    transform:scale(1.1);
}

@media (max-height: 710px) {
    #me {
        width: 20%;
    }
}

@media (max-width: 800px) {
    #me {
        width: 160px;
    }
}

.but-collapse {
    position: absolute;
    height: 64px !important;
}

@media (max-width: 992px) {
    .but-collapse {
        visibility: hidden;
    }
}

.parallax-container {
    width: 100%;
    line-height: 0;
    height: auto;
    color: rgba(255,255,255,.9);
}
.parallax-container .section {
    width: 100%;

}

@media only screen and (min-width : 992px) {
    .parallax-container {
        min-height: 450px;
    }
}

@media only screen and (max-width : 992px) {
    .parallax-container .section {
        position: absolute;
        top: 40%;
    }
    #index-banner .section {
        top: 10%;
    }
}

/* Override rules for materializecss */
nav {
    height: 64px !important;
    line-height: 64px !important;
}

.button-collapse {
    height: 64px !important;
}

@media only screen and (max-width : 600px) {
    .button-collapse i{
        position: absolute;
        margin-top: 4px;
    }
}

/* done */

#butWrap {
    position: absolute;
    margin-top: 64px;
    right: 10px;
    top: calc(50% - 64px);
    top: -moz-calc(50% - 64px);
    top: -webkit-calc(50% - 64px);
    top: -o-calc(50% - 64px);
    top: calc(50% - 64px);
}


.socialMedia {

    height: calc(100% - 64px);
    height: -moz-calc(100% - 64px);
    height: -webkit-calc(100% - 64px);
    height: -o-calc(100% - 64px);
    height: calc(100% - 64px);
    position: fixed;
    margin-top: 64px;
    top: calc(50% - 275px);
    top: -moz-calc(50% - 275px);
    top: -webkit-calc(50% - 275px);
    top: -o-calc(50% - 275px);
    top: calc(50% - 275px);
    right: -55px;
    bottom: 0;
}


#centered {
    display:table-cell;
    vertical-align:middle;
    text-align: right;
}

.sideAnimIn {
    -webkit-animation: socialMoveIn 1s forwards; /* Safari 4+ */
    -moz-animation:    socialMoveIn 1s forwards; /* Fx 5+ */
    -o-animation:      socialMoveIn 1s forwards; /* Opera 12+ */
    animation:         socialMoveIn 1s forwards; /* IE 10+, Fx 29+ */
}

.sideAnimOut {
    -webkit-animation: socialMoveOut 1s forwards; /* Safari 4+ */
    -moz-animation:    socialMoveOut 1s forwards; /* Fx 5+ */
    -o-animation:      socialMoveOut 1s forwards; /* Opera 12+ */
    animation:         socialMoveOut 1s forwards; /* IE 10+, Fx 29+ */
}

.sideAnimDown {
    -webkit-animation: socialMoveDown 1s forwards; /* Safari 4+ */
    -moz-animation:    socialMoveDown 1s forwards; /* Fx 5+ */
    -o-animation:      socialMoveDown 1s forwards; /* Opera 12+ */
    animation:         socialMoveDown 1s forwards; /* IE 10+, Fx 29+ */
}

.sideAnimUp {
    -webkit-animation: socialMoveUp 1s forwards; /* Safari 4+ */
    -moz-animation:    socialMoveUp 1s forwards; /* Fx 5+ */
    -o-animation:      socialMoveUp 1s forwards; /* Opera 12+ */
    animation:         socialMoveUp 1s forwards; /* IE 10+, Fx 29+ */
}

#centeredCaller {
    display:table-cell;
    vertical-align:middle;
    text-align: right;
    overflow:hidden;
}

#centeredCaller ul {
    margin-right: 20px;
}

@-webkit-keyframes socialMoveIn {
    0%   { right: -55px; }
    100% { right: 20px; }
}
@-moz-keyframes socialMoveIn {
    0%   { right: -55px; }
    100% { right: 20px; }
}
@-o-keyframes socialMoveIn {
    0%   { right: -55px; }
    100% { right: 20px; }
}
@keyframes socialMoveIn {
    0%   { right: -55px; }
    100% { right: 20px; }
}


@-webkit-keyframes socialMoveOut {
    0%   { right: 20px; }
    100% { right: -55px; }
}
@-moz-keyframes socialMoveOut {
    0%   { right: 20px; }
    100% { right: -55px; }
}
@-o-keyframes socialMoveOut {
    0%   { right: 20px; }
    100% { right: -55px; }
}
@keyframes socialMoveOut {
    0%   { right: 20px; }
    100% { right: -55px; }
}

@-webkit-keyframes socialMoveDown {
    0%   { right: 0px; }
    100% { right: 70px; }
}
@-moz-keyframes socialMoveDown {
    0%   { right: 0px; }
    100% { right: 70px; }
}
@-o-keyframes socialMoveDown {
    0%   { right: 0px; }
    100% { right: 70px; }
}
@keyframes socialMoveDown {
    0%   { right: 0px; }
    100% { right: 70px; }
}

@-webkit-keyframes socialMoveUp {
    0%   { right: 70px; }
    100% { right: 0px; }
}
@-moz-keyframes socialMoveUp {
    0%   { right: 70px; }
    100% { right: 0px; }
}
@-o-keyframes socialMoveUp {
    0%   { right: 70px; }
    100% { right: 0px; }
}
@keyframes socialMoveUp {
    0%   { right: 70px; }
    100% { right: 0px; }
}

@media (max-height: 165px) {
    #butWrap{
        position: fixed;
        right: 10px;
        top: 15px;
    }
}

